--- a/yaapp/templates/yabase/app/track.mustache
+++ b/yaapp/templates/yabase/app/track.mustache
@@ -1,40 +1,23 @@
 {% load i18n %}  
 
+<div class='picture'>
+  <a id='track-image-link' href='{% url webapp_radio current_uuid %}'> <img id='track-image' src='<% cover %>' width="84px" height="84px"/></a>
+</div>
 
-   <div class='picture'>
-       <a id='track-image-link' href='{% url webapp_radio current_uuid %}'> <img id='track-image' src='<% cover %>' width="84px" height="84px"/></a>
-   </div>
-
-   <div id='details'>
-
-       <div id='player-title'>
-       <% name %> {% trans "By" %} 
-       <strong><span id='track-artist'><% artist %></span></strong>
-       </div>
-       <div class="btn-toolbar">
-       <div class="btn-group">
-          <a class="btn" id='play'><i class="icon-play"></i></a>
-          <a class="btn" id='dec'><i class="icon-volume-down"></i></a>
-          <a class="btn" id='inc' ><i class="icon-volume-up"></i></a>
-          <a class="btn" id='like' ><i class="icon-heart"></i></a>
-       </div>
-
-       <div class="btn-group">
-       <a class="btn" id='btn-buy' href="<% buy_link %>" target='_blank'>
-        <i class="icon-shopping-cart"></i>
-        {% trans 'Buy on iTunes' %}
-        </a>
+<div id='details'>
+  <div class="btn-toolbar">
+    <div class="btn-group">
+      <a class="btn" id='play'><i class="icon-play"></i></a>
+      <a class="btn" id='dec'><i class="icon-volume-down"></i></a>
+      <div id='title-volume'>
+        <div id='player-title'><% name %> {% trans "By" %} <strong><span id='track-artist'><% artist %></span></strong></div>
+        <div class="progress no-ease" id='volume-control' onmousedown="return false">
+          <div class="bar" id='volume-position' style="width: 0%;" onmousedown="return false"></div>
         </div>
-       <div class="btn-group">
-        <a class="btn btn-auth btn-twitter" href="http://twitter.com/share" id="tweet" target="_blank" >{% trans "twitter" %}</a>
-       </div>
-       <div class="btn-group">
-        <a class="btn btn-auth btn-facebook" id='fb_share' href="#" rel="nofollow">{% trans "share" %}</a>
-       </div>        
-          <div class="progress no-ease" id='volume-control' onmousedown="return false">
-            <div class="bar" id='volume-position' style="width: 0%;" onmousedown="return false"></div>
-          </div>
-       </div>
-       
-   </div> 
-
+      </div>
+      <a class="btn" id='inc' ><i class="icon-volume-up"></i></a>
+      <a class="btn" id='like' ><i class="icon-heart"></i></a>
+      <a class="btn" id='btn-buy' href="<% buy_link %>" target='_blank'><i class="icon-shopping-cart"></i></a>
+    </div>
+  </div>
+</div> 
