--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -1,8 +1,24 @@
-{% extends "base.html" %}
+{% load i18n %}
 {% load i18n %}
 {% load thumbnail %}
 {% load compressed %}
 {% load straight_include %}
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="{{current_locale}}" lang="{{current_locale}}">
+<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# yasoundev: http://ogp.me/ns/fb/yasoundev#">
+    <title>{% block head_title %}Yasound{% endblock %}</title>
+    <link rel="icon" type="image/png" href="/media/yaweb/images/favicon.png" />
+    <meta name="description" content="Avec Yasound, créez votre radio en un instant, écoutez la musique avec vos amis, et communiquez avec eux en temps réel." />
+    <meta name="Author" content="Yasound SAS" />
+    <meta name="copyright" content="Yasound SAS" />
+    <meta http-equiv="Cache-control" content="public" />
+    <meta name="language" content="french" />
+    <link rel="stylesheet" href="/media/bootstrap/css/bootstrap.min.css"/>
+
+    <!--[if lte IE 7] -->
+        <link rel="stylesheet" href="/media/css/ie.css"/>
+    <!--<![endif]-->
 
 {% block extra_head %}
     {% block fb_open_graph %}{% endblock %}
@@ -151,7 +167,9 @@
 {% endif %}
 
 {% endblock %}
-{% block head_title %}{% trans "Yasound" %}{% endblock %}
+
+</head>
+<body>
 {% block body %}
 
 <div id="fb-root"></div>
@@ -180,10 +198,10 @@
 
 
 
-    <div class="navbar navbar-fixed-top">
+    <div class="navbar navbar-fixed-top" id='header'>
       <div class="navbar-inner">
-        <div class="container-fluid">
-            <a href='{% url webapp %}' id='btn-webapp' class='brand'><img src='/media/images/logo.png' alt='Yasound logo'/></a>
+        <div class="container">
+            <a href='{% url webapp %}' id='btn-webapp' class='brand'><img src='/media/app/images/yasound.png' alt='Yasound logo' width='138px' height='76px'/></a>
           
           <div class="nav-collapse">
             <div class='pull-right'>
@@ -233,7 +251,7 @@
 
 
           </div><!--/.nav-collapse -->
-            <div id='webapp-player'>
+            <div id='player'>
             </div>
             <div class='nav-collapse'>
 				<!-- AddThis Button BEGIN -->
@@ -251,13 +269,29 @@
       </div>
     </div>
     
-<div class='container-fluid' id='webapp-content'>{% block content%}{%endblock%}</div>
-<div class='container-fluid'>
-    <hr>
+<div class='container' id='webapp-content'>{% block content%}{%endblock%}</div>
+
+<div id='footer'>
+<div class='container'>
     <footer>
     <p>&copy; Yasound 2012</p>
     </footer>
 </div>
-
+</div>
+</body>
 {% endblock %}
+
+<script type="text/javascript">
+// GOOGLE ANALYTICS
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-4211339-12']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+</script>
+</html>
 
