--- a/yaapp/templates/yabase/app/programming/programmingPage.mustache
+++ b/yaapp/templates/yabase/app/programming/programmingPage.mustache
@@ -5,5 +5,6 @@
     <div class="btn-group" data-toggle="buttons-radio" id='programming-toolbar'>
     </div>
     <div id='content'></div>
+    <div class='cell-pagination' id='pagination'></div>
 </div>
 </div>
