* updated programming page * better view creation (existing el which allows direct dom manipulation inside render() functions)

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -256,7 +256,9 @@
       </div>
     </div>
     
+<div id='webapp-container'>
 <div class='container-fluid' id='webapp-content'>{% block content%}{%endblock%}</div>
+</div>
 <div class='container-fluid'>
     <hr>
     <footer>
