--- a/yaapp/templates/yabase/app/programming/programmingFilters.mustache
+++ b/yaapp/templates/yabase/app/programming/programmingFilters.mustache
@@ -9,11 +9,11 @@
     <tbody>
         <tr>
             <td>
-              <select multiple="multiple" id="artist-select">
+              <select multiple="multiple" id="artist-select" data-placeholder="{% trans 'Select artists' %}">
               </select>
              </td> 
             <td>
-              <select multiple="multiple" id="album-select">
+              <select multiple="multiple" id="album-select" data-placeholder="{% trans 'Select albums' %}">
               </select>
              </td> 
         </tr>
