footer partie gauche

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -274,8 +274,34 @@
 <div id='footer'>
 <div class='container'>
     <footer>
-    <p>&copy; Yasound 2012</p>
-    </footer>
+		<div id="contacts" class="blocks">
+			
+				<span id="cont"><a href="#" class="blanc">Contacts</a> - </span>
+				<span id="ment"><a href="#" class="blanc">Mentions légales</a></span>
+			</p>
+			<p id="social">
+				<img class="decalage" src="/media/app/images/facebook_logo.png"/>
+				<span class="socio"><a href="#" class="gris">Facebook</a></span>
+				<img class="decalage" src="/media/app/images/twitter_logo.png"/>
+				<span class="socio"><a href="#" class="gris">Twitter</a></span>
+			</p>
+		</div>
+		
+		
+		<!--
+		<div class="blocks">
+			<img class="separation" src="../../media/app/images/separation.png" width="1" height="81" alt="Separation">
+		</div>
+		<div id="Users" class="blocks">
+				<span id="connected_users" class="gris">Utilisateurs connetés</span>
+				<button type="button">Tous les voir</button>
+		</div>
+		<div id="minutes" class="blocks">
+			<span>XXX</span>
+			<span class="gris">minutes de musique ont été écoutées</span>
+		</div> -->
+	<p>&copy; Yasound 2012</p>
+	</footer>
 </div>
 </div>
 </body>
