--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -275,31 +275,52 @@
 <div class='container'>
     <footer>
 		<div id="contacts" class="blocks">
-			
-				<span id="cont"><a href="#" class="blanc">Contacts</a> - </span>
-				<span id="ment"><a href="#" class="blanc">Mentions légales</a></span>
+			<p>
+				<a href="#" class="footer-text-color1" title="contacts">Contacts</a> -
+				<a href="#" class="footer-text-color1" title="metions-legales">Mentions légales</a>
 			</p>
-			<p id="social">
-				<img class="decalage" src="/media/app/images/facebook_logo.png"/>
-				<span class="socio"><a href="#" class="gris">Facebook</a></span>
-				<img class="decalage" src="/media/app/images/twitter_logo.png"/>
-				<span class="socio"><a href="#" class="gris">Twitter</a></span>
+			<p>
+				<a href="#" class="footer-text-color2" title="facebook">
+					<img src="/media/app/images/facebook_logo.png" alt="facebook"/>
+					<span>Facebook</span>
+				</a>
+				<a href="#" class="footer-text-color2" title="facebook"> 
+					<img src="/media/app/images/twitter_logo.png" alt="twitter" class="padding-social-logo"/>
+					<span>Twitter</span>
+				</a>
 			</p>
 		</div>
-		
-		
-		<!--
-		<div class="blocks">
-			<img class="separation" src="../../media/app/images/separation.png" width="1" height="81" alt="Separation">
+
+		<div class="separation">
+			<img src="../../media/app/images/separation.png" width="4" height="81" alt="separation">
 		</div>
-		<div id="Users" class="blocks">
-				<span id="connected_users" class="gris">Utilisateurs connetés</span>
+		
+		<div id="connected-users" class="blocks">
+			<p id="text-users">
+				Utilisateurs connetés
+			</p>
+			<p id="img-profiles">
+				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
+				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
+				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
+				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
+				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
+				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
+				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
+				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
+				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
+				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
+				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
+				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
+				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
+				
 				<button type="button">Tous les voir</button>
+			</p>
 		</div>
 		<div id="minutes" class="blocks">
 			<span>XXX</span>
 			<span class="gris">minutes de musique ont été écoutées</span>
-		</div> -->
+		</div>
 	<p>&copy; Yasound 2012</p>
 	</footer>
 </div>
