--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -299,7 +299,7 @@
 			<p id="text-users">
 				Utilisateurs connetés
 			</p>
-			<p id="img-profiles">
+			<p id="img-users">
 				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
 				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
 				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
@@ -317,11 +317,14 @@
 				<button type="button">Tous les voir</button>
 			</p>
 		</div>
-		<div id="minutes" class="blocks">
-			<span>XXX</span>
-			<span class="gris">minutes de musique ont été écoutées</span>
+		<div class="separation">
+			<img src="../../media/app/images/separation.png" width="4" height="81" alt="separation">
 		</div>
-	<p>&copy; Yasound 2012</p>
+		<div id="minutes" class="blocks">
+			<span class="footer-text-color1" >232 523</span>
+			<p class="footer-text-color2" >minutes de musique ont été écoutées</p>
+		</div>
+	<p id="copyright">&copy; Yasound 2012</p>
 	</footer>
 </div>
 </div>
