--- a/yaapp/media/css/style.css
+++ b/yaapp/media/css/style.css
@@ -319,3 +319,12 @@ ul.es-blogs li {
     margin-top:20px;
     margin-bottom:20px;
 }
+
+#betatest-form {
+	width:600px;
+}
+
+."sous_quel_identifiant_?" {
+    border:4px solid black;
+}	
+}
