--- a/yaapp/apps/yaweb/templates/yaweb/betatest_thankyou.html
+++ b/yaapp/apps/yaweb/templates/yaweb/betatest_thankyou.html
@@ -27,8 +27,8 @@
 		</div>
 
 		<div class='row-fluid'>
-            <p class='lead'>Nous vous enverrons un mail afin de confirmer
-                votre participation.</p>
+			<p class='lead'>Nous confirmerons votre participation par l'envoi
+				d'un mail dans la semaine du 16 juillet.</p>
 		</div>
 </body>
 </html>
