--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -314,7 +314,9 @@
 				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
 				<img class="individual-pictures" src="../../media/app/images/portrait1.png" width="34" height="34" alt="portrait">
 				
-				<button type="button">Tous les voir</button>
+				<a href="#" id="footer-button">
+				    <span id="footer-button-text">Tous les voir</span>
+				</a>
 			</p>
 		</div>
 		<div class="separation">
