--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -29,6 +29,26 @@ body {
 	height: 76px;
 }
 
+.header-separation {
+	display:inline-block;
+	float:left;
+	margin-top:14px;
+	margin-left:20px;
+}
+
+#audio-quality {
+	display:inline-block;
+	float:left;
+	margin-top:26px;
+	margin-left:22px;
+}
+
+#audio-quality-btn {
+	position:relative;
+	left:28px;
+	top:1px;
+}
+
 #header .brand {
 	margin: 0;
 	padding: 0;
@@ -57,7 +77,7 @@ body {
 	font-weight:;
 }
 
-.separation {
+.footer-separation {
 	float:left;
 	margin-top:38px;
 }
