--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -208,8 +208,16 @@
 				<img src="../../media/app/images/header-separation.png" width="4" height="54" alt="Header Separation">
 			</div>
 			<div id="audio-quality">
-					<img id="audio-quality-btn" src="../../media/app/images/btn-sound-quality.png" width="25" height="25" alt="Btn Sound Quality">
-					<img src="../../media/app/images/slider-sound-quality.png" width="70" height="25" alt="Slider Sound Quality">
+				<img id="audio-quality-padding" src="../../media/app/images/btn-sound-quality.png" width="28" height="28" alt="Btn Sound Quality">
+				<img id="SD" class="audio-quality-padding" src="../../media/app/images/SD.png" width="21" height="12" alt="SD">
+			</div>
+			<div id="radio-picto">
+				<a href="#">
+					<img src="../../media/app/images/radio-picto.png" width="32" height="32" alt="Radio Picto">
+				</a>
+			</div>
+			<div id="favoris-radio">
+				<img src="../../media/app/images/favorite-radio.png" width="37" height="36" alt="Favorite Radio">
 			</div>
           
           <div class="nav-collapse">
