--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -290,9 +290,7 @@
       </div>
     </div>
     
-<div id='webapp-container'>
-    <div class='container' id='webapp-content'>{% block content%}{%endblock%}</div>
-</div>
+<div id='webapp-container'>{% block content%}{%endblock%}</div>
 
 <div id='footer'>
 <div class='container'>
