--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -219,6 +219,9 @@
 			<div id="favoris-radio">
 				<img src="../../media/app/images/favorite-radio.png" width="37" height="36" alt="Favorite Radio">
 			</div>
+			<div id="play-btn">
+				<img src="../../media/app/images/play-btn.png" width="37" height="37" alt="Play Btn">
+			</div>
           
           <div class="nav-collapse">
             <div class='pull-right'>
