removed current player wip on skin in dev

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -206,29 +206,12 @@
       <div class="navbar-inner">
         <div class="container">
 			<div id="brand-logo">
-				<a href="brand-logo" {% url webapp %}>
-					<img src="../../media/app/images/brand-logo.png" width="138" height="23" alt="Logo Yasound">
+				<a href="#" {% url webapp %}>
+					<img src="/media/app/images/brand-logo.png" width="138" height="23" alt="Logo Yasound">
 				</a>
 			</div>
 			<div class="header-separation">
-				<img src="../../media/app/images/header-separation.png" width="4" height="54" alt="Header Separation">
-			</div>
-			<div id="audio-quality">
-				<a href="#">
-					<img id="audio-quality-padding" src="../../media/app/images/btn-sound-quality.png" width="28" height="28" alt="Btn Sound Quality">
-				</a>
-				<img id="SD" class="audio-quality-padding" src="../../media/app/images/SD.png" width="21" height="12" alt="SD">
-			</div>
-			<div id="radio-picto">
-				<a href="#">
-					<img src="../../media/app/images/radio-picto.png" width="32" height="32" alt="Radio Picto">
-				</a>
-			</div>
-			<div id="favoris-radio">
-				<img src="../../media/app/images/favorite-radio.png" width="37" height="36" alt="Favorite Radio">
-			</div>
-			<div id="play-btn">
-			
+				<img src="/media/app/images/header-separation.png" width="4" height="54" alt="Header Separation">
 			</div>
           	<div class="nav-collapse">
             	<div class='pull-right'>
