--- a/yaapp/media/css/style_widget.css
+++ b/yaapp/media/css/style_widget.css
@@ -67,14 +67,12 @@ footer #menu a:hover {
 #player
 ,#widget-player
  {
-	margin-top: 24px;
-	background-color: #F5F5F5;
+	margin-top: 10px;
 	border-radius: 6px 6px 6px 6px;
-	padding: 60px;
+	padding: 0px;
 	background-repeat: no-repeat;
 	background-position: 10px 10px;
-	background-color: #F5F5F5;
-	margin-bottom: 24px;
+	margin-bottom: 10px;
 }
 
 
@@ -95,7 +93,6 @@ footer #menu a:hover {
 
 #track-picture {
 	float: left;
-	margin-right: 20px;
 }
 
 #track-picture .btn-group {
@@ -106,11 +103,12 @@ footer #menu a:hover {
 }
 
 #track-details {
-	
+	clear:both;
+	padding-top:10px;
 }
 
 #track-details p {
-	height: 54px;
+	height: 26px;
 	font-size: 12px;
 }
 
