--- a/yaapp/templates/yabase/app/radio/radioPage.mustache
+++ b/yaapp/templates/yabase/app/radio/radioPage.mustache
@@ -1,4 +1,5 @@
 {% load i18n %}
+<div class='row'>
 <div class='span4'>
     <div id='webapp-radio'></div>
     <div class='well'>
@@ -15,4 +16,5 @@
     <ul id='wall'></ul>
     </div>
     <div id='pagination'></div>
+</div>
 </div>
