--- a/yaapp/templates/yabase/app/common/connectedUser.mustache
+++ b/yaapp/templates/yabase/app/common/connectedUser.mustache
@@ -1,1 +1,1 @@
-{% load i18n %}<img class="individual-pictures" src="<% picture %>" width="34" height="34" alt="portrait">
+{% load i18n %}<a href="{% url webapp %}profile/<% username %>/"><img class="individual-pictures" src="<% picture %>" width="34" height="34" alt="portrait"></a>
