fixed path for media

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -313,7 +313,7 @@
 		</div>
 
 		<div class="footer-separation">
-			<img src="../../media/app/images/separation.png" width="4" height="81" alt="separation">
+			<img src="/media/app/images/separation.png" width="4" height="81" alt="separation"/>
 		</div>
 		
 		<div id="connected-users" class="blocks">
@@ -328,7 +328,7 @@
 			</p>
 		</div>
 		<div class="footer-separation">
-			<img src="../../media/app/images/separation.png" width="4" height="81" alt="separation">
+			<img src="/media/app/images/separation.png" width="4" height="81" alt="separation"/>
 		</div>
 		<div id="minutes" class="blocks">
 			<span class="footer-text-color1" >232 523</span>
