improved footer dynamic stuff
* minutes displayed and refreshed periodically

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -331,7 +331,7 @@
 			<img src="/media/app/images/separation.png" width="4" height="81" alt="separation"/>
 		</div>
 		<div id="minutes" class="blocks">
-			<span class="footer-text-color1" >232 523</span>
+			<span class="footer-text-color1" >0</span>
 			<p class="footer-text-color2" >minutes de musique ont été écoutées</p>
 		</div>
 	<p id="copyright">&copy; Yasound 2012</p>
