updated links for facebook & twitter pages

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -302,11 +302,11 @@
 				<a id='btn-legal' href="{% url webapp_legal %}" class="footer-text-color1" title="{% trans 'Legal informations' %}">{% trans 'Legal informations' %}</a>
 			</p>
 			<p>
-				<a href="#" class="footer-text-color2" title="facebook">
+				<a href="https://facebook.com/yasound" class="footer-text-color2" title="facebook" target='_blank'>
 					<img src="/media/app/images/facebook_logo.png" alt="facebook"/>
 					<span>Facebook</span>
 				</a>
-				<a href="#" class="footer-text-color2" title="facebook"> 
+				<a href="https://twitter.com/YasoundSAS" class="footer-text-color2" title="twitter" target='_blank'> 
 					<img src="/media/app/images/twitter_logo.png" alt="twitter" class="padding-social-logo"/>
 					<span>Twitter</span>
 				</a>
